src/objects/Financial_Security__c.object
<CustomObject>
    <description>SARA</description>
    <fields>
        <fullName>ANG_ConvertedAmount__c</fullName>
        <description>Shows the FS amount converted to the Account&apos;s currency (located on the RHC Information object)</description>
        <label>Converted Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANG_Financial_Security_Currency__c</fullName>
        <formula>TEXT(Reception_Case__r.Financial_Security_Currency__c)</formula>
        <label>Financial Security Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Minimum_Financial_Security__c</fullName>
        <formula>Reception_Case__r.Financial_Security_Amount__c</formula>
        <label>Financial Security Amount (Minimum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANG_isToUpdateRHC__c</fullName>
        <description>Technical field to help control the rhc record update on financial security triggerhandler</description>
        <formula>(ISPICKVAL(Account__r.Location_Type__c,&apos;GE&apos;) || ISPICKVAL(Account__r.Location_Type__c,&apos;HE&apos;) || (ISPICKVAL(Account__r.Location_Type__c,&apos;AE&apos;) &amp;&amp; ISPICKVAL(Account__r.IATA_ISO_Country__r.ANG_RHC_LocationType__c, &apos;Include all AEs&apos;))) &amp;&amp; (ISPICKVAL(Account__r.ANG_Accreditation_Model__c,&apos;Cash&apos;) || ISPICKVAL(Account__r.ANG_Accreditation_Model__c,&apos;Multicountry&apos;))</formula>
        <label>Update RHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Case_BSP_Country__c</fullName>
        <description>Country value that is transmitted to the automatically created renewal case.</description>
        <formula>TEXT( Account__r.IATA_ISO_Country__r.Case_BSP_Country__c )</formula>
        <label>Account Case BSP Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>SARA</description>
        <formula>IF(Account__r.BillingCountry &lt;&gt; &quot;Serbia&quot;,Account__r.BillingCountry ,  Financial_Institution__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>SARA</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Account must have Agency record type.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Securities</relationshipLabel>
        <relationshipName>Financial_Securities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Acknowledge_Sent_Date__c</fullName>
        <label>Acknowledge Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Acknowledgment_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if a notification was sent regarding the FS</description>
        <label>Acknowledgment sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount with currency</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Archiving_company_s_ID__c</fullName>
        <description>Stores the ID of the Financial Security as assigned by the archiving company to help operational teams find the FS referenced by that company faster.</description>
        <label>Archiving company’s ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Expiry_date__c</fullName>
        <description>calculates the days left until the expiry date</description>
        <formula>IF(OR(ISPICKVAL(Security_Status__c ,&quot;Not Active Yet&quot;), ISPICKVAL(Security_Status__c ,&quot;Active&quot;),ispickval(Security_Status__c ,&quot;Close to Expiry Date&quot;)), Expiry_Date__c - DATEVALUE(now()),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates the days left until the expiry date</inlineHelpText>
        <label>Days to Expiry date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Encashment_Date__c</fullName>
        <description>SARA</description>
        <label>Encashment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>SARA - Bank guarantee expiry date</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Security_ID__c</fullName>
        <description>SARA</description>
        <inlineHelpText>Optional, in case the security has an external identifier</inlineHelpText>
        <label>External Security ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SARA</description>
        <inlineHelpText>It is mandatory to link the security with an institution. If the institution does not exist, create it first and then create the security related to it</inlineHelpText>
        <label>Financial Institution</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Institution__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Generic FI</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Institution__c</referenceTo>
        <relationshipLabel>Financial Securities</relationshipLabel>
        <relationshipName>Financial_Securities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Security_Validation_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case through which the bank (Financial institution) acknowledges that the Financial Security provided by the agency is valid.</description>
        <inlineHelpText>Please fill in the case number through which the bank confirms the validity of this Financial Security</inlineHelpText>
        <label>Financial Security Validation Case</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This field can only be filled in for Bank Guarantees</errorMessage>
            <filterItems>
                <field>$Source.Security_Type__c</field>
                <operation>equals</operation>
                <value>Bank Guarantee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Financial Security Validation Case</relationshipLabel>
        <relationshipName>Financial_Securities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Security_Validation__c</fullName>
        <description>ACR 06749697 - This field to validate FS in order to prevent fraudulent financial securities.</description>
        <inlineHelpText>Fill the date when the financial security is validated with the financial institution issuer upon receipt.</inlineHelpText>
        <label>Financial Security Validation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Call_Letter_required1__c</fullName>
        <description>Takes the value from the Financial Institution through a WF</description>
        <label>First Call Letter required</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Call_Letter_required__c</fullName>
        <formula>IF(OR(
ISPICKVAL(Security_Type__c , &quot;Financial Guarantee&quot;),
AND( ISPICKVAL(Region__c , &quot;Americas&quot;),ISPICKVAL(Security_Type__c , &quot;Insurance Bond&quot;)),
AND( ISPICKVAL(Region__c , &quot;Americas&quot;),ISPICKVAL(Security_Type__c , &quot;Surety Bond&quot;)),
AND( ISPICKVAL(Region__c , &quot;Asia &amp; Pacific&quot;), OR(ISPICKVAL(Security_Type__c , &quot;Insurance Bond&quot;),ISPICKVAL(Security_Type__c , &quot;TAANZ Bonding Scheme&quot;),ISPICKVAL(Security_Type__c , &quot;DIP&quot;))),

AND(ISPICKVAL(Region__c , &quot;Africa &amp; middle East&quot;), OR( ISPICKVAL(Security_Type__c , &quot;DIP&quot;), ISPICKVAL(Security_Type__c , &quot;CWA Mutual Fund&quot;))),

AND(ISPICKVAL(Region__c , &quot;China &amp; north Asia&quot;), ISPICKVAL(Security_Type__c , &quot;Insurance Bond&quot;))),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Call Letter required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_code__c</fullName>
        <formula>Account__r.IATACode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IATA code comes from the acccount object related to this security</inlineHelpText>
        <label>IATA code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_updated_by_source__c</fullName>
        <label>Last Updated by Source</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minimumrelease__c</fullName>
        <description>SARA</description>
        <inlineHelpText>Specify the date before which this guarantee shall not be release</inlineHelpText>
        <label>Should not be released before</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reasonforrequest__c</fullName>
        <description>SARA</description>
        <label>Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>ACC change</fullName>
                </value>
                <value>
                    <fullName>Financial Review</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Previous Security Update</fullName>
                </value>
                <value>
                    <fullName>Irregularities</fullName>
                </value>
                <value>
                    <fullName>CASS Associate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reception_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reception Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Financial Securities</relationshipLabel>
        <relationshipName>Financial_Securities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reception_Date__c</fullName>
        <description>SARA</description>
        <label>Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Africa &amp; Middle East</fullName>
                </value>
                <value>
                    <fullName>Asia &amp; Pacific</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Fill in the case number related to the release of the financial security</inlineHelpText>
        <label>Release Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Financial Securities (Release Case)</relationshipLabel>
        <relationshipName>Financial_SecuritiesReleased</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>SARA</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Reason__c</fullName>
        <description>SARA</description>
        <label>Release Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Voluntary Relinquishment</fullName>
                </value>
                <value>
                    <fullName>Favorable Financial Situation</fullName>
                </value>
                <value>
                    <fullName>Security Update</fullName>
                </value>
                <value>
                    <fullName>Encashment</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>SARA- Bank guarantee remarks</description>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Case_Creation_Date__c</fullName>
        <formula>DATEVALUE( Renewal_Case__r.CreatedDate )</formula>
        <label>Renewal Case Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the renewal case that is automatically created 75 days before the expiry date of the Financial Security record.</description>
        <label>Renewal Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Financial Securities (Renewal Case)</relationshipLabel>
        <relationshipName>Financial_Securities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Status__c</fullName>
        <description>SARA - status of the financial security</description>
        <label>Security Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close to Expiry Date</fullName>
                    <color>#F3D904</color>
                    <label>Close to Expiry Date</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <color>#B6E32E</color>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                    <color>#CC0000</color>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>Released</fullName>
                    <color>#2F5D85</color>
                    <label>Released</label>
                </value>
                <value>
                    <fullName>Encashed</fullName>
                    <color>#0B6FCE</color>
                    <label>Encashed</label>
                </value>
                <value>
                    <fullName>Not Active yet</fullName>
                </value>
                <value>
                    <fullName>Encashment in progress</fullName>
                </value>
                <value>
                    <fullName>Inactive_Addendum</fullName>
                </value>
                <value>
                    <fullName>Pending to be Released</fullName>
                </value>
                <value>
                    <fullName>Pending Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Type__c</fullName>
        <description>SARA - Security type</description>
        <label>Security Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bank Guarantee</fullName>
                </value>
                <value>
                    <fullName>CCG</fullName>
                </value>
                <value>
                    <fullName>Cross Border Guarantee</fullName>
                </value>
                <value>
                    <fullName>CWA Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>DIP</fullName>
                </value>
                <value>
                    <fullName>Financial Guarantee</fullName>
                </value>
                <value>
                    <fullName>GDI</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Insurance Bond</fullName>
                </value>
                <value>
                    <fullName>Ireland Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Joint Bank Guarantee (India)</fullName>
                </value>
                <value>
                    <fullName>Letter Of Credit</fullName>
                </value>
                <value>
                    <fullName>Letter Of Undertaking</fullName>
                </value>
                <value>
                    <fullName>Manifestacion de Bienes</fullName>
                </value>
                <value>
                    <fullName>MCBG</fullName>
                </value>
                <value>
                    <fullName>MCPG</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>OTOC</fullName>
                </value>
                <value>
                    <fullName>Parent Company Guarantee</fullName>
                </value>
                <value>
                    <fullName>Recapitalization</fullName>
                </value>
                <value>
                    <fullName>Standby Letter Of Credit</fullName>
                </value>
                <value>
                    <fullName>Statement Of Assignment</fullName>
                </value>
                <value>
                    <fullName>Surety Bond</fullName>
                </value>
                <value>
                    <fullName>TAANZ Bonding Scheme</fullName>
                </value>
                <value>
                    <fullName>Time Deposit</fullName>
                </value>
                <value>
                    <fullName>Time Deposit Pledge</fullName>
                </value>
                <value>
                    <fullName>Transit Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_FS_acknowledgment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send FS acknowledgment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <defaultValue>&quot;Manual entry&quot;</defaultValue>
        <inlineHelpText>reflects the source of the Fin. Security</inlineHelpText>
        <label>Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_image__c</fullName>
        <description>Image status</description>
        <formula>IF( ISPICKVAL( Security_Status__c , &quot;Active&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015200000011tpe&quot;,&quot;Active&quot;,30,30), 

IF(or( ISPICKVAL( Security_Status__c , &quot;Released&quot;), ISPICKVAL( Security_Status__c , &quot;Encashed&quot;),ISPICKVAL( Security_Status__c , &quot;Not Active Yet&quot;),ISPICKVAL( Security_Status__c , &quot;Inactive_Addendum&quot;) ),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015200000011tpf&quot;,&quot;Released&quot;,30,30),

IF( ISPICKVAL( Security_Status__c , &quot;Expired&quot;),  
IMAGE(&quot;/servlet/servlet.FileDownload?file=015200000011tpg&quot;,&quot;Expired&quot;,30,30),

IF( ISPICKVAL( Security_Status__c , &quot;Encashment in progress&quot;),  
IMAGE(&quot;/servlet/servlet.FileDownload?file=015w0000004RhqP&quot;,&quot;Encashment in progress&quot;,30,30),

IF( ISPICKVAL( Security_Status__c , &quot;Pending to be Released&quot;),  
IMAGE(&quot;/servlet/servlet.FileDownload?file=0151r000006DJop&quot;,&quot;Pending to be Released&quot;,30,30),

IF( ISPICKVAL( Security_Status__c , &quot;Pending Validation&quot;),  
IMAGE(&quot;/servlet/servlet.FileDownload?file=0151r000006DJop&quot;,&quot;Pending to be Released&quot;,30,30),

IF(ISPICKVAL( Security_Status__c , &quot;Close to Expiry Date&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015200000011tph&quot;,&quot;Requested&quot;,30,30), &quot;error&quot;
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Two_months_passed_expiry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for flagging FS with first call letter required when two months of expiry date have passed. This info goes to the account and then to the case.</description>
        <label>Two months passed expiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unlimited_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates the bank guarantee has no expiration date</inlineHelpText>
        <label>Unlimited Validity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validity_Start_Date__c</fullName>
        <inlineHelpText>Date as from when the financial security is valid</inlineHelpText>
        <label>Validity Start Date</label>
        <type>Date</type>
    </fields>
    <label>Financial Security</label>
    <listViews>
        <fullName>A1_AR_PY_UY</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Argentina,Paraguay,Uruguay</value>
        </filters>
        <label>A1 - AR PY UY</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATAArgentina</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_Active_Securities</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <filters>
            <field>Security_Status__c</field>
            <operation>equals</operation>
            <value>Active,Close to Expiry Date</value>
        </filters>
        <label>A1 All Active Securities</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDFSAmericasAgencyManagement</group>
            <group>IDFSAmericasallusers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_BO</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Bolivia</value>
        </filters>
        <label>A1 - BO</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATABolivia</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_BR</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <label>A1 - BR</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATABrazil</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_BS_VG</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Bahamas,British Virgin</value>
        </filters>
        <label>A1 - BS VG</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATAEasternCaribbean</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_BZ</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Belize</value>
        </filters>
        <label>A1 - BZ</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATACentralAmerica</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_CA_BM_PM</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Canada,Bermuda</value>
        </filters>
        <label>A1 - CA BM PM</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATACanada</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_CL</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Chile</value>
        </filters>
        <label>A1 - CL</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATAChile</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_CO</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Colombia</value>
        </filters>
        <label>A1 - CO</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATAColombia</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_CR</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Costa Rica</value>
        </filters>
        <label>A1 - CR</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATACentralAmerica</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_Closetoexpiry_Securities</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Security_Status__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <filters>
            <field>Security_Status__c</field>
            <operation>equals</operation>
            <value>Close to Expiry Date</value>
        </filters>
        <label>A1 All Close to expiry Securities</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDFSAmericasAgencyManagement</group>
            <group>IDFSAmericasallusers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_DO</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Dominican Republic</value>
        </filters>
        <label>A1 - DO</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATAWesternCaribbean</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A1_EAC</fullName>
        <columns>Status_image__c</columns>
        <columns>NAME</columns>
        <columns>Security_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Days_to_Expiry_date__c</columns>
        <columns>Security_Type__c</columns>
        <columns>Account_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Anguilla,Antigua and Barbuda,Aruba,Bahamas,Barbados,Saint Kitts and Nevis</value>
        </filters>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Dominica,Grenada,Guyana,Montserrat,Netherland Antilles</value>
        </filters>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Saint Lucia,Saint Vincent and the Grenadines,Suriname,Curaçao,Saint Maarten</value>
        </filters>
        <filters>
            <field>Account_Country__c</field>
            <operation>equals</operation>
            <value>Eastern Caribbean,Trinidad,Tobago,&quot;Bonaire, Saba, St. Eustatius&quot;,Curacao</value>
        </filters>
        <label>A1 - EAC</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATAEasternCaribbean</group>
            <group>IDFSAmericasAgencyManagement</group>
        </sharedTo>
    </listViews>
</CustomObject>